--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,41 @@
+server:
+  port: 8080
+
 spring:
   application:
-    name: investment-iq
+    name: investment-iq-backend
+
+  datasource:
+    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres
+    username: postgres.hbbhqhyhboghwglajrlx
+    password: investmentiqdb2026
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        jdbc:
+          time_zone: UTC
+
+  spring:
+    jackson:
+      time-zone: UTC
+      write-dates-as-timestamps: false
+
+#logging:
+#  level:
+#    root: INFO
+#    com.investmentiq: DEBUG
+#  file:
+#    name: logs/investment-iq.log
+#  pattern:
+#    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
