--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,13 +6,13 @@ spring:
     name: investment-iq-backend
 
   datasource:
-    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?currentSchema=investment_iq_dev
+    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?currentSchema=investment_iq_test
     username: postgres.hbbhqhyhboghwglajrlx
     password: investmentiqdb2026
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
