--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,15 +4,20 @@ server:
 spring:
   application:
     name: investment-iq-backend
+  security:
+    user:
+      name: admin
+      password: admin
+      roles: ADMIN
 
   datasource:
-    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres
+    url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?prepareThreshold=0
     username: postgres.hbbhqhyhboghwglajrlx
     password: investmentiqdb2026
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
