--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ spring:
     url: jdbc:postgresql://aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres?prepareThreshold=0
     username: postgres.hbbhqhyhboghwglajrlx
     password: investmentiqdb2026
+    hikari:
+      schema: investment_iq_dev
 
   jpa:
     hibernate:
